fix erros with css family names white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     /*heading and logo style*/
     h1,
     h2 {
-        font-family: bebas neue, sans-serif;
+        font-family: "bebas neue", sans-serif;
         text-transform: uppercase;
         letter-spacing: 4px;
         color: #ffb101;
@@ -129,7 +129,7 @@
         background-color: #ffb301ad;
         color: black;
         font-size: 1.5rem;
-        font-family: bebas neue, sans-serif;
+        font-family: "bebas neue", sans-serif;
         padding: 10px 0 10px;
     }
 
@@ -144,12 +144,12 @@
 
     .form-label {
         color: black;
-        font-family: bebas neue, sans-serif;
+        font-family: "bebas neue", sans-serif;
     }
 
     .form-text {
         color: black;
-        font-family: bebas neue, sans-serif;
+        font-family: "bebas neue", sans-serif;
         font-size: 1.2rem;
     }
 
@@ -163,7 +163,7 @@
 
     .copyright {
         color: black;
-        font-family: bebas neue;
+        font-family: "bebas neue";
 
     }
 
@@ -286,7 +286,7 @@
     .raid a {
         font-size: 1.7rem;
         color: #ffb101;
-        font-family: beba neue, sans-serif;
+        font-family: "beba neue", sans-serif;
         padding: 20px 0 20px;
         margin: 50px;
     }
@@ -304,7 +304,7 @@
 
     #times p {
         font-size: 1.3rem;
-        font-family: beba neue, sans-serif;
+        font-family: "beba neue", sans-serif;
         padding: 20px 0 20px;
         background-color: rgba(8, 8, 8, 0.604);
     }
@@ -378,7 +378,7 @@
     .recruiting p {
         background-color: rgba(8, 8, 8, 0.604);
         font-size: 1.5rem;
-        font-family: beba neue, sans-serif;
+        font-family: "beba neue", sans-serif;
         padding: 20px 0 20px;
 
     }
